recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double){
	for (i<- 1 to 8-steps) {
	baisseCrayon
	current(steps)
	avance(length)
	
	if (steps!=1) {
		droite(angle)
		tree(steps-1, length*shrink, angle, shrink)
	}
	else {leveCrayon
		recule(length)
		gauche(2*angle)
		steps=steps+1
		tree(steps-1, length/shrink,angle, shrink)
	
	}
	}
	
	
	
}


/*Pour dessiner un arbre à quatre étages, il faut dessiner 
 un tronc de la taille indiquée, tourner à droite de 
 l'angle indiqué, faire un arbre à 3 étages, tourner à 
 gauche de deux fois l'angle indiqué, faire un autre arbre 
 à 3 étages, puis revenir à sa position initiale. N'oubliez 
 pas de revenir à la position initiale !
 tree(steps, length, angle, shrink)*/
